tests/positive/import_path.ax
module import_path;

import shared.util;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return twice(21) - 42;
}
