tests/negative/main_with_param.ax
module main_with_param;

fn main(argc: i32) -> i32 {
    return argc;
}
